# torch_dist_ext

./: CMakeLists.txt  README.md  all_reduce_fusion.cpp  build_cuda.sh  build_rocm.sh  cmake.py  register.cpp
cgemm/: __init__.py
include/: all_reduce_fusion.h  collectives.h  device_common.h
src/: register.cpp
src/common/: all_reduce_fusion_impl.h  device_common.h  negzero.h
src/ops/: all_reduce_fusion.cpp  all_reduce_fusion.h  cgemm.cpp  cgemm.h
test/: test_all_reduce_fusion.py  unit_test.cpp  unit_test.py
torch_dist_ext/: __init__.py
utils/: collectives.h  compare.h  device_common.h  utils.h
